fix version mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-image: linear-gradient(
+}
+
+body {
+  background: linear-gradient(
     to right top,
     #08072c,
     #091235,
@@ -19,6 +22,7 @@ body {
     #5890d1,
     #66a8ec
   );
+  background-repeat: no-repeat;
 }
 
 a {
@@ -36,57 +40,24 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: linear-gradient(
+      to right top,
+      #08072c,
+      #091235,
+      #0d193f,
+      #112149,
+      #142853,
+      #1c3462,
+      #244072,
+      #2c4d82,
+      #3b629c,
+      #4979b6,
+      #5890d1,
+      #66a8ec
+    ) !important;
   }
 }
 
-.container .text {
-  position: relative;
-  color: #4070f4;
-  font-size: 30px;
-  font-weight: 600;
-}
-
-.container .text.first-text {
-  color: #fff;
-}
-
-.text.sec-text:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: #041c32;
-  border-left: 2px solid #4070f4;
-  animation: animate 4s steps(12) infinite;
-}
-
-@keyframes animate {
-  40%,
-  60% {
-    left: 100%;
-  }
-  100% {
-    left: 0%;
-  }
-}
-
-/**
- colors: 
- 041C32
- 04293A
- 064663
- ECB365
-*/
-
-span {
-  animation: blinker 1s linear infinite;
-}
-
-@keyframes blinker {
-  50% {
-    opacity: 0;
-  }
+#__next {
+  height: 100svh;
 }
